src/index.scss
/* ... */
.menu-icon {
  position: absolute; 
  top: 0;
  border: none;
  background: transparent;
  margin: clamp(20px, 3vw, 75px);
  cursor: pointer;

  svg {
    color: $cherry;
    width: clamp(20px, 5vw, 50px);
    height: 100%;
  }
}

.menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: $cherry;
  z-index: 20;
  
  button {
    border: none;
    background: transparent;
    margin: 20px;
    cursor: pointer;
    
    svg {
      color: $white;
      width: 30px;
      height: 100%;

      &:hover {
        color: $pink;
      }
    }
  }

  ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;

    li {
      padding: clamp(10px, 2vw, 20px);
      margin: clamp(10px, 1vw, 10px);
      list-style: none;
    }

    li * {
      text-decoration: none;
      color: $white;
      font-size: clamp(0.75rem, 2vw, 1rem);
      font-weight: 700;
      letter-spacing: 2px;

      &:hover {
        color: $pink;
      }
    }
  }
}

.btn {
  border-radius: clamp(5px, 0.25vw, 10px);
  border-radius: 50px;
  width: 100px;
  text-decoration: none;
  font-weight: 700;
  font-size: clamp(0.75rem, 1vw, 1rem);
  padding-block: clamp(8px, 1.25vw, 15px);
  padding-inline: clamp(15px, 2vw, 30px);
  margin-right: clamp(5px, 0.75vw, 15px);
  border: none;
  cursor: pointer;
  color: $white;
  background-color: $cherry;
  border: 1px solid $cherry;

    &:hover {
      background-color: $pink;
    }

  &.secondary-btn {
    color: $cherry;
    border: 1px solid $cherry;
    background-color: $white;

    &:hover {
      color: $white;
      background-color: $pink;
    }
  }
}

.home-page {
  position: relative;
  display: flex;
  align-items: center;
  margin-top: clamp(75px, 10vw, 150px);

  .home {
    width: 100%;
    border-radius: 20px;
    background-color: $white;
    margin-right: clamp(50px, 10vw, 150px);
    margin-left: clamp(100px, 20vw, 300px);
    padding-block: clamp(50px, 10vw, 100px);
    padding-left: clamp(120px, 15vw, 200px);
    padding-right: clamp(30px, 5vw, 75px);

    h1 {
      font-size: clamp(1.2rem, 3.5vw, 3.5rem);
      font-weight: 400;
      margin: 0;

      span {
        font-size: clamp(1.5rem, 5vw, 4.5rem);
        font-family: 'Kaushan Script', cursive;
        color: $pink;
      }
    }

    h2 {
      font-size: clamp(0.75rem, 1.5vw, 1.5rem);
      font-weight: 100;
      letter-spacing: 2px;
      margin: 0;
    }

    .socials-description {
      display: flex;
      align-items: center;
      margin-block: clamp(10px, 1.5vw, 30px);

      .home-socials {
        text-align: center;
        margin-right: clamp(10px, 1.5vw, 20px);


        svg {
          width: clamp(15px, 1.5vw, 30px);
          margin-bottom: clamp(0px, 1vw, 30px);
        }

        svg.linkedin {
          width: clamp(12px, 1.3vw, 25px);
          height: 100%;
        }
      }
      
      p {
        font-size: clamp(0.75rem, 1.25vw, 1.5rem);
        letter-spacing: 0.15px;
        line-height: 175%;
      }
    }

    .home-buttons {
        margin-block: clamp(10px, 3vw, 50px);
    }
  }
}

.phone-container {
  position: absolute;
  top: 0;
  left: clamp(20px, 10vw, 150px);
  height: 100%;
  display: flex;
  align-items: center;
}
/* ... */

